// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker renders in playground 1`] = `
<DatePicker
  date={2018-01-01T00:00:00.000Z}
  iconComponent={
    <TextIcon
      style={
        Object {
          "color": "#757575",
          "fontSize": 20,
        }
      }
    >
      
    </TextIcon>
  }
  onDateChange={[Function]}
/>
`;

exports[`DatePicker works with max date 1`] = `
<DatePicker
  date={2018-01-01T00:00:00.000Z}
  iconComponent={
    <TextIcon
      style={
        Object {
          "color": "#757575",
          "fontSize": 20,
        }
      }
    >
      
    </TextIcon>
  }
  maxDate={2018-01-01T00:00:00.000Z}
  onDateChange={[Function]}
/>
`;

exports[`DatePicker works with min date 1`] = `
<DatePicker
  date={2018-01-01T00:00:00.000Z}
  iconComponent={
    <TextIcon
      style={
        Object {
          "color": "#757575",
          "fontSize": 20,
        }
      }
    >
      
    </TextIcon>
  }
  minDate={2018-01-01T00:00:00.000Z}
  onDateChange={[Function]}
/>
`;

exports[`DatePicker works with other date formats 1`] = `
<DatePicker
  date={2018-01-01T00:00:00.000Z}
  format="L"
  iconComponent={
    <TextIcon
      style={
        Object {
          "color": "#757575",
          "fontSize": 20,
        }
      }
    >
      
    </TextIcon>
  }
  onDateChange={[Function]}
/>
`;
